# se_hostlib

./: CMakeLists.txt
ax/: a71ch_com.c  a71ch_com_scp.c  a71ch_sst.c  ax_crypto_ecc.c  ax_scp.c  ax_sss_scp.c  ax_sst.c
common/: axHostCrypto.h  hcAsn.c  nxLog.c  sci2c.c  scp.c  sm_printf.c
mbedtls/: ax_mbedtls.c  ecdh_alt_ax.c
platform/: app_boot.c  i2c_a7.c  i2c_frdm.c  i2c_imxrt10xx.c  i2c_lpc54xxx.c  sm_timer.c
src/: HostCryptoAPImbedtls.c
tst/: app_boot.h  tstHostCrypto_mbedtls.c  tst_sm_time.c  tst_sm_time.h  tst_utils_kinetis.c
wrapper/: libA71CH_api.c  libA71CH_api.h
